--- a/banner/config.json
+++ b/banner/config.json
@@ -1,80 +1,1 @@
-{
-  "errorCode": 0,
-  "errorMsg": "ok",
-  "data": {
-    "banner_list": [
-      {
-        "id": "bS1Y2j9agj",
-        "title": "paint1.0 sing2",
-        "type": 2,
-        "priority": 19,
-        "banner_img": "https://cdn.montieco.com/terminal/online/20211220/hZ8NWhMFqz-1639995051.jpg",
-        "reference_key": "EMWvFFWPZ0",
-        "url": ""
-      },
-      {
-        "id": "JYEoWJz7bV",
-        "title": "paint1.0 Christmas paid theme",
-        "type": 2,
-        "priority": 18,
-        "banner_img": "https://cdn.montieco.com/terminal/online/20211220/hnNKAMsHrC-1640005805.jpg",
-        "reference_key": "cUgaDXyK96",
-        "url": ""
-      },
-      {
-        "id": "pT8v_Ro8zs",
-        "title": "paint1.0 christmas",
-        "type": 2,
-        "priority": 15,
-        "banner_img": "https://cdn.montieco.com/terminal/online/20211209/tSvgaZUnGy-1639039049.jpg",
-        "reference_key": "E2-FREBojT",
-        "url": ""
-      },
-      {
-        "id": "g4B3Ub8pio",
-        "title": "1.0 paid theme-Winter Bugle",
-        "type": 2,
-        "priority": 14,
-        "banner_img": "https://cdn.montieco.com/terminal/online/20211128/67SRHR2PZA-1638075067.jpg",
-        "reference_key": "knmQWOGxNN",
-        "url": ""
-      },
-      {
-        "id": "fIWYh4q1Be",
-        "title": "Paw Patrol 1.0",
-        "type": 2,
-        "priority": 12,
-        "banner_img": "https://cdn.montieco.com/terminal/online/20210908/4r-qcyjGvg-1631088362.jpeg",
-        "reference_key": "fHD7iZ8TEr",
-        "url": ""
-      },
-      {
-        "id": "paSX6t6Hwo",
-        "title": "1.0-en-fb-v69~",
-        "type": 3,
-        "priority": 11,
-        "banner_img": "https://cdn.montieco.com/terminal/online/20210607/ZfH_Xi6jDJ-1623055827.jpg",
-        "reference_key": "",
-        "url": "https://fb.watch/5ZBPaJoIo7/"
-      },
-      {
-        "id": "BMr7kwkxgB",
-        "title": "Paid Theme-Vampire",
-        "type": 2,
-        "priority": 10,
-        "banner_img": "https://cdn.montieco.com/terminal/online/20210323/sKil1qtP8F-1616500926.jpg",
-        "reference_key": "_UxxinfIi0",
-        "url": ""
-      },
-      {
-        "id": "p4vWCw7tCF",
-        "title": "1.0-en-noads-v69~",
-        "type": 1,
-        "priority": 7,
-        "banner_img": "https://cdn.montieco.com/terminal/online/20201123/ewAQUJk3kY-1606114136.png",
-        "reference_key": "",
-        "url": ""
-      }
-    ]
-  }
-}
+{"errorCode":0,"errorMsg":"ok","data":{"banner_list":[{"id":"bS1Y2j9agj","title":"paint1.0 sing2","type":2,"priority":19,"banner_img":"https://cdn.montieco.com/terminal/online/20211220/hZ8NWhMFqz-1639995051.jpg","reference_key":"EMWvFFWPZ0","url":""},{"id":"JYEoWJz7bV","title":"paint1.0 Christmas paid theme","type":2,"priority":18,"banner_img":"https://cdn.montieco.com/terminal/online/20211220/hnNKAMsHrC-1640005805.jpg","reference_key":"cUgaDXyK96","url":""},{"id":"g4B3Ub8pio","title":"1.0 paid theme-Winter Bugle","type":2,"priority":14,"banner_img":"https://cdn.montieco.com/terminal/online/20211128/67SRHR2PZA-1638075067.jpg","reference_key":"knmQWOGxNN","url":""},{"id":"fIWYh4q1Be","title":"Paw Patrol 1.0","type":2,"priority":12,"banner_img":"https://cdn.montieco.com/terminal/online/20210908/4r-qcyjGvg-1631088362.jpeg","reference_key":"fHD7iZ8TEr","url":""},{"id":"paSX6t6Hwo","title":"1.0-en-fb-v69~","type":3,"priority":11,"banner_img":"https://cdn.montieco.com/terminal/online/20210607/ZfH_Xi6jDJ-1623055827.jpg","reference_key":"","url":"https://fb.watch/5ZBPaJoIo7/"},{"id":"BMr7kwkxgB","title":"Paid Theme-Vampire","type":2,"priority":10,"banner_img":"https://cdn.montieco.com/terminal/online/20210323/sKil1qtP8F-1616500926.jpg","reference_key":"_UxxinfIi0","url":""},{"id":"p4vWCw7tCF","title":"1.0-en-noads-v69~","type":1,"priority":7,"banner_img":"https://cdn.montieco.com/terminal/online/20201123/ewAQUJk3kY-1606114136.png","reference_key":"","url":""}]}}
